tests/expectations/parser/program/stub_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'onchain', 'const', 'fn', 'program', 'script' -- found 'stub'
    --> test:7:1
     |
   7 | stub credits.aleo {
     | ^^^^
